# RAG_general

./: .gitignore  pyproject.toml  requirements.txt
data/: urls.txt  web_cache.json
data/text_files/: general_info.txt
notebook/: step01_setup_test.ipynb  step02_data_ingestion.ipynb
