[project]
name = "vector-db"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "crawl4ai>=0.8.6",
    "huggingface-hub>=1.9.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pinecone-client>=6.0.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "tokenizers>=0.22.2",
    "transformers>=5.5.0",
    "unstructured>=0.21.5",
]

[project.scripts]
vector-db = "vector_db:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
